Codigo Fuente/Codigo de NCalc/NCalc/NCalcParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 NCalc.g 2021-12-17 16:41:36

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System;
using System.Text;
using System.Globalization;
using NCalc.Domain;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  NCalc 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class NCalcParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "B", "C", "D", "DATETIME", "DIGIT", "E", "EXPONENT", "EscapeSequence", "F", "FALSE", "FLOAT", "G", "H", "HexDigit", "I", "ID", "INTEGER", "J", "K", "L", "LETTER", "M", "N", "NAME", "NOT", "O", "OR", "P", "Q", "R", "S", "STRING", "T", "TRUE", "U", "UnicodeEscape", "V", "W", "WS", "X", "Y", "Z", "'!'", "'!='", "'%'", "'&&'", "'&'", "'('", "')'", "'*'", "'**'", "'+'", "','", "'-'", "'/'", "':'", "'<'", "'<<'", "'<='", "'<>'", "'='", "'=='", "'>'", "'>='", "'>>'", "'?'", "'^'", "'|'", "'||'", "'~'"
	};
	public const int EOF=-1;
	public const int A=4;
	public const int AND=5;
	public const int B=6;
	public const int C=7;
	public const int D=8;
	public const int DATETIME=9;
	public const int DIGIT=10;
	public const int E=11;
	public const int EXPONENT=12;
	public const int EscapeSequence=13;
	public const int F=14;
	public const int FALSE=15;
	public const int FLOAT=16;
	public const int G=17;
	public const int H=18;
	public const int HexDigit=19;
	public const int I=20;
	public const int ID=21;
	public const int INTEGER=22;
	public const int J=23;
	public const int K=24;
	public const int L=25;
	public const int LETTER=26;
	public const int M=27;
	public const int N=28;
	public const int NAME=29;
	public const int NOT=30;
	public const int O=31;
	public const int OR=32;
	public const int P=33;
	public const int Q=34;
	public const int R=35;
	public const int S=36;
	public const int STRING=37;
	public const int T=38;
	public const int TRUE=39;
	public const int U=40;
	public const int UnicodeEscape=41;
	public const int V=42;
	public const int W=43;
	public const int WS=44;
	public const int X=45;
	public const int Y=46;
	public const int Z=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;

	public NCalcParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public NCalcParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return NCalcParser.tokenNames; } }
	public override string GrammarFileName { get { return "NCalc.g"; } }


	private const char BS = '\\';
	private static NumberFormatInfo numberFormatInfo = new NumberFormatInfo();

	private string extractString(string text) {
	    
	    StringBuilder sb = new StringBuilder(text);
	    int startIndex = 1; // Skip initial quote
	    int slashIndex = -1;

	    while ((slashIndex = sb.ToString().IndexOf(BS, startIndex)) != -1)
	    {
	        char escapeType = sb[slashIndex + 1];
	        switch (escapeType)
	        {
	            case 'u':
	              string hcode = String.Concat(sb[slashIndex+4], sb[slashIndex+5]);
	              string lcode = String.Concat(sb[slashIndex+2], sb[slashIndex+3]);
	              char unicodeChar = Encoding.Unicode.GetChars(new byte[] { System.Convert.ToByte(hcode, 16), System.Convert.ToByte(lcode, 16)} )[0];
	              sb.Remove(slashIndex, 6).Insert(slashIndex, unicodeChar); 
	              break;
	            case 'n': sb.Remove(slashIndex, 2).Insert(slashIndex, '\n'); break;
	            case 'r': sb.Remove(slashIndex, 2).Insert(slashIndex, '\r'); break;
	            case 't': sb.Remove(slashIndex, 2).Insert(slashIndex, '\t'); break;
	            case '\'': sb.Remove(slashIndex, 2).Insert(slashIndex, '\''); break;
	            case '\\': sb.Remove(slashIndex, 2).Insert(slashIndex, '\\'); break;
	            default: throw new RecognitionException("Unvalid escape sequence: \\" + escapeType);
	        }

	        startIndex = slashIndex + 1;

	    }

	    sb.Remove(0, 1);
	    sb.Remove(sb.Length - 1, 1);

	    return sb.ToString();
	}

	public List<string> Errors { get; private set; }

	public override void DisplayRecognitionError(String[] tokenNames, RecognitionException e) {
	    
	    base.DisplayRecognitionError(tokenNames, e);
	    
	    if(Errors == null)
	    {
	    	Errors = new List<string>();
	    }
	    
	    String hdr = GetErrorHeader(e);
	    String msg = GetErrorMessage(e, tokenNames);
	    Errors.Add(msg + " at " + hdr);
	}

	public LogicalExpression GetExpression() => ncalcExpression().value;



	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	private sealed partial class ncalcExpression_return : AstParserRuleReturnScope<CommonTree, IToken>
	{
		public LogicalExpression value;
		public ncalcExpression_return(NCalcParser grammar) {OnCreated(grammar);}
		partial void OnCreated(NCalcParser grammar);
	}

	partial void EnterRule_ncalcExpression();
	partial void LeaveRule_ncalcExpression();
	// $ANTLR start "ncalcExpression"
	// NCalc.g:83:1: ncalcExpression returns [LogicalExpression value] : logicalExpression EOF !;
	[GrammarRule("ncalcExpression")]
	private NCalcParser.ncalcExpression_return ncalcExpression()
	{
		EnterRule_ncalcExpression();
		EnterRule("ncalcExpression", 1);
		TraceIn("ncalcExpression", 1);
		NCalcParser.ncalcExpression_return retval = new NCalcParser.ncalcExpression_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> logicalExpression1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree EOF2_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "ncalcExpression");
		DebugLocation(83, 1);
		try
		{
			// NCalc.g:84:2: ( logicalExpression EOF !)
			DebugEnterAlt(1);
			// NCalc.g:84:4: logicalExpression EOF !
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(84, 4);
			PushFollow(Follow._logicalExpression_in_ncalcExpression73);
			logicalExpression1=logicalExpression();
			PopFollow();

			adaptor.AddChild(root_0, logicalExpression1.Tree);
			DebugLocation(84, 25);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_ncalcExpression75); 
			DebugLocation(84, 27);
			retval.value = (logicalExpression1!=null?((NCalcParser.logicalExpression_return)logicalExpression1).value:default(LogicalExpression)); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("ncalcExpression", 1);
			LeaveRule("ncalcExpression", 1);
			LeaveRule_ncalcExpression();
		}
		DebugLocation(85, 1);
		} finally { DebugExitRule(GrammarFileName, "ncalcExpression"); }
		return retval;

	}
	// $ANTLR end "ncalcExpression"

	private sealed partial class logicalExpression_return : AstParserRuleReturnScope<CommonTree, IToken>
	{
		public LogicalExpression value;
		public logicalExpression_return(NCalcParser grammar) {OnCreated(grammar);}
		partial void OnCreated(NCalcParser grammar);
	}

	partial void EnterRule_logicalExpression();
	partial void LeaveRule_logicalExpression();
	// $ANTLR start "logicalExpression"
	// NCalc.g:87:1: logicalExpression returns [LogicalExpression value] : left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? ;
	[GrammarRule("logicalExpression")]
	private NCalcParser.logicalExpression_return logicalExpression()
	{
		EnterRule_logicalExpression();
		EnterRule("logicalExpression", 2);
		TraceIn("logicalExpression", 2);
		NCalcParser.logicalExpression_return retval = new NCalcParser.logicalExpression_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken char_literal3 = default(IToken);
		IToken char_literal4 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> left = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> middle = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> right = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree char_literal3_tree = default(CommonTree);
		CommonTree char_literal4_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "logicalExpression");
		DebugLocation(87, 1);
		try
		{
			// NCalc.g:88:2: (left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? )
			DebugEnterAlt(1);
			// NCalc.g:88:4: left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(88, 8);
			PushFollow(Follow._conditionalExpression_in_logicalExpression95);
			left=conditionalExpression();
			PopFollow();

			adaptor.AddChild(root_0, left.Tree);
			DebugLocation(88, 31);
			 retval.value = (left!=null?((NCalcParser.conditionalExpression_return)left).value:default(LogicalExpression)); 
			DebugLocation(88, 57);
			// NCalc.g:88:57: ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==71))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// NCalc.g:88:59: '?' middle= conditionalExpression ':' right= conditionalExpression
				{
				DebugLocation(88, 59);
				char_literal3=(IToken)Match(input,71,Follow._71_in_logicalExpression101); 
				char_literal3_tree = (CommonTree)adaptor.Create(char_literal3);
				adaptor.AddChild(root_0, char_literal3_tree);
				DebugLocation(88, 69);
				PushFollow(Follow._conditionalExpression_in_logicalExpression105);
				middle=conditionalExpression();
				PopFollow();

				adaptor.AddChild(root_0, middle.Tree);
				DebugLocation(88, 92);
				char_literal4=(IToken)Match(input,61,Follow._61_in_logicalExpression107); 
				char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
				adaptor.AddChild(root_0, char_literal4_tree);
				DebugLocation(88, 101);
				PushFollow(Follow._conditionalExpression_in_logicalExpression111);
				right=conditionalExpression();
				PopFollow();

				adaptor.AddChild(root_0, right.Tree);
				DebugLocation(88, 124);
				 retval.value = new TernaryExpression((left!=null?((NCalcParser.conditionalExpression_return)left).value:default(LogicalExpression)), (middle!=null?((NCalcParser.conditionalExpression_return)middle).value:default(LogicalExpression)), (right!=null?((NCalcParser.conditionalExpression_return)right).value:default(LogicalExpression))); 

				}
				break;

			}
			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("logicalExpression", 2);
			LeaveRule("logicalExpression", 2);
			LeaveRule_logicalExpression();
		}
		DebugLocation(89, 1);
		} finally { DebugExitRule(GrammarFileName, "logicalExpression"); }
		return retval;

	}
	// $ANTLR end "logicalExpression"

	private sealed partial class conditionalExpression_return : AstParserRuleReturnScope<CommonTree, IToken>
	{
		public LogicalExpression value;
		public conditionalExpression_return(NCalcParser grammar) {OnCreated(grammar);}
		partial void OnCreated(NCalcParser grammar);
	}

	partial void EnterRule_conditionalExpression();
	partial void LeaveRule_conditionalExpression();
	// $ANTLR start "conditionalExpression"
	// NCalc.g:91:1: conditionalExpression returns [LogicalExpression value] : left= booleanAndExpression ( ( '||' | OR ) right= conditionalExpression )* ;
	[GrammarRule("conditionalExpression")]
	private NCalcParser.conditionalExpression_return conditionalExpression()
	{
		EnterRule_conditionalExpression();
		EnterRule("conditionalExpression", 3);
		TraceIn("conditionalExpression", 3);
		NCalcParser.conditionalExpression_return retval = new NCalcParser.conditionalExpression_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken set5 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> left = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> right = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree set5_tree = default(CommonTree);

		BinaryExpressionType type = BinaryExpressionType.Unknown;

		try { DebugEnterRule(GrammarFileName, "conditionalExpression");
		DebugLocation(91, 1);
		try
		{
			// NCalc.g:95:2: (left= booleanAndExpression ( ( '||' | OR ) right= conditionalExpression )* )
			DebugEnterAlt(1);
			// NCalc.g:95:4: left= booleanAndExpression ( ( '||' | OR ) right= conditionalExpression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(95, 8);
			PushFollow(Follow._booleanAndExpression_in_conditionalExpression138);
			left=booleanAndExpression();
			PopFollow();

			adaptor.AddChild(root_0, left.Tree);
			DebugLocation(95, 30);
			 retval.value = (left!=null?((NCalcParser.booleanAndExpression_return)left).value:default(LogicalExpression)); 
			DebugLocation(95, 56);
			// NCalc.g:95:56: ( ( '||' | OR ) right= conditionalExpression )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==OR||LA2_1==74))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// NCalc.g:96:4: ( '||' | OR ) right= conditionalExpression
					{
					DebugLocation(96, 4);

					set5=(IToken)input.LT(1);
					if (input.LA(1)==OR||input.LA(1)==74)
					{
						input.Consume();
						adaptor.AddChild(root_0, (CommonTree)adaptor.Create(set5));
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(96, 16);
					 type = BinaryExpressionType.Or; 
					DebugLocation(97, 9);
					PushFollow(Follow._conditionalExpression_in_conditionalExpression163);
					right=conditionalExpression();
					PopFollow();

					adaptor.AddChild(root_0, right.Tree);
					DebugLocation(97, 32);
					 retval.value = new BinaryExpression(type, retval.value, (right!=null?((NCalcParser.conditionalExpression_return)right).value:default(LogicalExpression))); 

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("conditionalExpression", 3);
			LeaveRule("conditionalExpression", 3);
			LeaveRule_conditionalExpression();
		}
		DebugLocation(99, 1);
		} finally { DebugExitRule(GrammarFileName, "conditionalExpression"); }
		return retval;

	}
	// $ANTLR end "conditionalExpression"

	private sealed partial class booleanAndExpression_return : AstParserRuleReturnScope<CommonTree, IToken>
	{
		public LogicalExpression value;
		public booleanAndExpression_return(NCalcParser grammar) {OnCreated(grammar);}
		partial void OnCreated(NCalcParser grammar);
	}

	partial void EnterRule_booleanAndExpression();
	partial void LeaveRule_booleanAndExpression();
	// $ANTLR start "booleanAndExpression"
	// NCalc.g:101:1: booleanAndExpression returns [LogicalExpression value] : left= bitwiseOrExpression ( ( '&&' | AND ) right= bitwiseOrExpression )* ;
	[GrammarRule("booleanAndExpression")]
	private NCalcParser.booleanAndExpression_return booleanAndExpression()
	{
		EnterRule_booleanAndExpression();
		EnterRule("booleanAndExpression", 4);
		TraceIn("booleanAndExpression", 4);
		NCalcParser.booleanAndExpression_return retval = new NCalcParser.booleanAndExpression_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken set6 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> left = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> right = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree set6_tree = default(CommonTree);

		BinaryExpressionType type = BinaryExpressionType.Unknown;

		try { DebugEnterRule(GrammarFileName, "booleanAndExpression");
		DebugLocation(101, 1);
		try
		{
			// NCalc.g:105:2: (left= bitwiseOrExpression ( ( '&&' | AND ) right= bitwiseOrExpression )* )
			DebugEnterAlt(1);
			// NCalc.g:105:4: left= bitwiseOrExpression ( ( '&&' | AND ) right= bitwiseOrExpression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(105, 8);
			PushFollow(Follow._bitwiseOrExpression_in_booleanAndExpression197);
			left=bitwiseOrExpression();
			PopFollow();
